--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +13,52 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/*----Global Styles ----*/
+textarea:hover, 
+input:hover, 
+textarea:active, 
+input:active, 
+textarea:focus, 
+input:focus,
+button:focus,
+button:active,
+button:hover,
+label:focus,
+.btn:active,
+.btn.active
+{
+    outline:0px !important;
+    -webkit-appearance:none;
+    box-shadow: none !important;
+}
+
+/*----Fonts----*/
+.myFont {
+  font-family: 'Shadows Into Light', cursive;
+}
+
+/*----Search page-----*/
+.top-pad {
+  padding-top: 15%;
+}
+
+.title {
+  font-size: 4rem;
+}
+
+          /*---- smartphones, portrait and landscape ---*/
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+  .title {
+    font-size: 2rem;
+  }
+}
+
+          /*--- tablet ---*/
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+  .title {
+    font-size: 3rem;
+  }
+}
+/*-----------------*/
+
